<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/tools"
    xmlns:tools="http://schemas.android.com/tools"
    app:cardCornerRadius="15dp"
    app:cardElevation ="10dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardCornerRadius ="5dp"
    app:cardUseCompatPadding="true"
    tools:ignore="MissingConstraints"
    card_view:ignore="MissingConstraints">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:orientation="horizontal"
                android:gravity="center"
                android:padding="1dp"
                android:layout_alignParentStart="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <ImageView
                    android:src="@drawable/fire"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:padding="5dp"
                    />
                <TextView
                    android:text="@string/toutkin"
                    android:textSize="16dp"
                    android:layout_margin="5dp"
                    android:textStyle="bold|normal"
                    android:textColor="#1B314C"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </RelativeLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_margin="9dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/doctor"
                android:textSize="16dp"
                android:layout_margin="5dp"
                android:textStyle="bold|normal"
                android:textColor="#1B314C"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="@string/titre_doctor"
                android:textSize="16dp"
                android:layout_margin="5dp"
                android:textStyle="bold|normal"
                android:textColor="#1B314C"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>
