<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="15dp"
    android:layout_width="match_parent"
    android:layout_height="130dp"
    android:elevation="10dp"
    card_view:cardCornerRadius ="5dp"
    app:cardUseCompatPadding="true"
    >
<LinearLayout
    android:orientation="vertical"
    android:padding="10dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:ignore="UselessParent">

        <LinearLayout
            android:gravity="center"
            android:layout_alignParentStart="true"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="25dp"
                android:layout_margin="5dp"
                android:layout_height="25dp"
                android:src="@drawable/kt_logo"
                android:contentDescription="email"
                card_view:ignore="ExtraText" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_contact"
                />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

               <LinearLayout
                   android:orientation="horizontal"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   card_view:ignore="UseCompoundDrawables">
                   <ImageView
                       android:layout_width="30dp"
                       android:layout_height="30dp"
                       android:padding="5dp"
                       android:src="@drawable/email"
                       app:tint="#1D1F70"
                       android:contentDescription="email" />
                   <TextView
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:textSize="19sp"
                       android:text="@string/mail"
                       />
               </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    card_view:ignore="UseCompoundDrawables">
                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:padding="5dp"
                        android:src="@drawable/phone"
                        app:tint="#1D1F70"
                        android:contentDescription="call" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="19sp"
                        android:text="@string/contact"
                        />
                </LinearLayout>
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    card_view:ignore="UseCompoundDrawables">
                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:padding="5dp"
                        android:src="@drawable/account"
                        app:tint="#1D1F70"
                        card_view:ignore="ContentDescription" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="19sp"
                        android:text="@string/github"
                        />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>
</androidx.cardview.widget.CardView>