<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".MainActivity">
    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="47dp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="0dp"
        android:orientation="horizontal">
       <com.google.android.material.textfield.TextInputLayout
           style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
           app:helperTextTextColor="#D61D1D"
           android:layout_width="match_parent"
           android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nom"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:lines="1"
            android:inputType="text"
            android:hint="Nom"
            />
       </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="2dp"
        android:orientation="horizontal">
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            app:helperTextTextColor="#D61D1D"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/prenom"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:lines="1"
                android:inputType="text"
                android:hint="Prenom"
                />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="2dp"
        android:orientation="horizontal">
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            app:helperTextTextColor="#D61D1D"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <AutoCompleteTextView
                android:id="@+id/promo"
                android:focusable="false"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="Promotion"
                />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="2dp"
        android:orientation="horizontal">
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            app:helperTextTextColor="#D61D1D"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edDate"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:lines="1"
                android:focusable="false"
                android:inputType="date"
                android:hint="Date de naissance"
                />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="14dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnAdd"
            android:layout_width="123dp"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_btn"
            android:text="Enregistrer"
            android:textAllCaps="false"
            android:textSize="10dp"
            android:textColor="#FFFFFF"
            app:backgroundTint="#2986CF" />

        <Button
            android:id="@+id/btnUpdate"
            android:layout_width="123dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="11dp"
            android:background="@drawable/custom_btn"
            android:text="Modification"
            android:textSize="10dp"
            app:backgroundTint="#2986CF" />
        <Button
            android:id="@+id/btnView"
            android:layout_width="93dp"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_btn"
            android:layout_marginLeft="6dp"
            android:text="Liste"
            android:textSize="10dp"
            app:backgroundTint="#2986CF" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="1dp"
            android:layout_marginVertical="1dp"
            android:background='#f1f1f1'
            tools:ignore="UselessParent">

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/nom"
                    android:textColor="@color/black"
                    android:textSize="13sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/prenom"
                    android:textColor="@color/black"
                    android:textSize="13sp" />

                <TextView
                    android:layout_width="1dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/promo"
                    android:textColor="@color/black"
                    android:textSize="13sp" />
                <TextView
                    android:layout_width="2dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/age"
                    android:textColor="@color/black"
                    android:textSize="13sp" />

            </TableRow>
        </TableLayout>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible"
        tools:visibility="gone" />

    <TextView
        android:id="@+id/tvNoRecordsAvailable"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="Pas de donnée dispo!!!"
        android:textSize="18sp"
        android:visibility="gone"
        tools:visibility="visible" />


</LinearLayout>